--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,6 +20,7 @@
         <!-- Default styles -->
         <link rel="stylesheet" href="styles.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 
         <!-- Polyfill(s) for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script>
