--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="styles.css" />
         <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Polyfill(s) for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script>
 
